# aspectLib

./: .gitignore  README.md  README_OLD.md  aspectLib.yml  aspect_lib.sh  environment.yml  extra_configurations.sh  install.sh  manager.sh  my_jobs.sh  new_case.sh  process.sh  record.sh  run_aspect.sh  server_commands.sh  slurm.sh  slurm_config  submit_job.sh  test_global.sh  test_ssh_command.sh  todo.mkd  utilities.sh
bash_scripts/: affinity.sh  build_aspect.sh  build_aspect_docker.sh  case_update.sh  organize_results.sh  parse_block_output.sh  parse_case.sh  post_process.sh  rsync_case.sh  run_aspect.sh  slurm_config.sh
bash_scripts/awk_states/: parse_block_newton  parse_block_output  parse_log_last_step  parse_resume_computation  parse_snapshot
bash_tests/: test_aspect_lib.sh  test_parse_block_output.sh  test_parse_case.sh  test_slurm.sh  test_utilities.sh
bash_tests/test_parse_block_output/: block_output_std.txt  block_output_std1.txt  block_output_std2.txt  block_output_std3.txt  log1.txt  log2.txt
bash_tests/test_parse_case/: log.txt  log1.txt
bash_tests/test_utilities/: test1.json
cpp_scripts/: ellipse_distance.cpp
env/: enable.sh  enable_frontera.sh  enable_local.sh  enable_peloton.sh  enable_shilofue.sh  enable_stampede2.sh  server_list
files/: Base.py  Hirth_Kohlstedt.json  ab17.json  aspect_rheology_example.json  awk_base  base.sh  enable_std.sh  phase_function_syntax.prm  test_base.sh  twoDSubduction_base.prm  visit_script_base.py  vtk_scripts_base.cxx
files/AffinityTest/: organize_results.sh  run_all.py
files/CDPT/: Billen2018pyrolite.json  Billen2018pyrolite_sinking_block.json
files/LearnAspect/: 2dslab_sph.prm  2dslab_sph_ve_spcrust.prm  base.prm  composition-passive.prm  config_group_07172020.json  convection-box.prm  convection-box_adaptive_refinement.prm  convection-box_additional_refinement_time.prm  convection-box_minimum_refinement_function.prm  inclusion.prm  isolines_slab_2D.prm  phase_transition_issue.prm  phases_mantle.prm  sinking_blob.prm  sinking_blob_traction.prm
files/Project/: Cases.py  Group.py  PlotCase.py  PlotParaview.py  PlotVisit.py  VtkPp.py  case.json  group.json
files/ThDSubduction/: depth_average.txt  figure_step_template.json  figure_step_template_box_01212024.json  (+1 more)
jupyter_notebooks/: CDPT.ipynb  depth_average.txt  mantle_rheology.ipynb
paraview_scripts/: base.py  load_xml.old.py  slab.py
pygmt_scripts/: aspect_plotting_util.py
shilofue/: AffinityTest.py  Analytics.py  AnalyzeAffinityTestResults.py  CaseOptions.py  Cases.py  Doc.py  FlowLaws.py  GPlateLib.py  Group.py  JsonOpt.py  LearnAspect.py  Parse.py  ParsePrm.py  PhaseTransition.py  Plot.py  PlotCase.py  PlotCombine.py  PlotDepthAverage.py  PlotHeatFlow.py  PlotParaview.py  PlotRunTime.py  PlotStatistics.py  PlotVisit.py  PostHefesto.py  Rheology.py  Schedule.py  Scripting.py  ThermalModel.py  TwoDSubduction.py  Utilities.py  VtkPp.py  WorldBuilder.py  flow_law_functions.py  run_all.py
tests/: in
visit_scripts/: base.py  default.py  readme.mkd  temperature.py
vtk_scripts/: AspectVTK.cxx  AspectVTK.h  CMakeLists.txt  TwoDSubduction_MOW.cxx  TwoDSubduction_SlabAnalysis.cxx  TwoDSubduction_SlabAnalysis_01172022.cxx
vtk_scripts/VtKScripts/: CMakeLists.txt  VtKScripts.cxx
vtk_test/ReadUnstructuredGrid/: CMakeLists.txt  ReadUnstructuredGrid.cxx
vtk_test/VtKScripts/: CMakeLists.txt  VtKScripts.cxx
(+1114 files in other folders)
